@startuml

title __UIELEMENTS's Class Diagram__\n

  namespace com.apetrei.engine {
    namespace gui {
      namespace UIElements {
        class com.apetrei.engine.gui.UIElements.Button {
            ~ buttonText : String
            ~ scale : float
            ~ sprite : BufferedImage
            + draw()
            {static} + makeButton()
            {static} + makeShortButton()
            + setPosition()
            + update()
            # Button()
            - isPressed()
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace gui {
      namespace UIElements {
        class com.apetrei.engine.gui.UIElements.MapButton {
            + draw()
            {static} + makeMapButton()
            # MapButton()
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace gui {
      namespace UIElements {
        abstract class com.apetrei.engine.gui.UIElements.UIElement {
            # isActive : boolean
            # isInteractive : boolean
            {abstract} + draw()
            + setActive()
            + setnteractivee()
            {abstract} + update()
            ~ UIElement()
        }
      }
    }
  }
  

  com.apetrei.engine.gui.UIElements.Button -up-|> com.apetrei.engine.gui.UIElements.UIElement
  com.apetrei.engine.gui.UIElements.Button o-- com.apetrei.misc.Vector2 : cornerA
  com.apetrei.engine.gui.UIElements.Button o-- com.apetrei.misc.Vector2 : cornerB
  com.apetrei.engine.gui.UIElements.Button o-- com.apetrei.misc.Vector2 : position
  com.apetrei.engine.gui.UIElements.Button o-- com.apetrei.misc.Vector2 : size
  com.apetrei.engine.gui.UIElements.MapButton -up-|> com.apetrei.engine.gui.UIElements.Button
  com.apetrei.engine.gui.UIElements.UIElement o-- com.apetrei.misc.command.Command : command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
